[gd_scene load_steps=6 format=3 uid="uid://bbxgwa0m1b1hb"]

[ext_resource type="Script" path="res://hunters/hunters.gd" id="1_l8ubf"]
[ext_resource type="Texture2D" uid="uid://b6824ovhswwq7" path="res://images/UI Icons/Weapon Icons/Sword_And_Shield.png" id="2_d8lb7"]
[ext_resource type="Texture2D" uid="uid://2v1w2eg0fq8g" path="res://images/UI Icons/Weapon Icons/Gunlance.png" id="3_j8s5d"]
[ext_resource type="Texture2D" uid="uid://b6xvmd6mk40di" path="res://images/UI Icons/Weapon Icons/Hammer.png" id="4_24q4t"]
[ext_resource type="Texture2D" uid="uid://pcamvebexga3" path="res://images/UI Icons/Weapon Icons/Lance.png" id="5_y2ug4"]

[node name="hunters" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -517.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8ubf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 98.0
theme_override_constants/separation = 75
alignment = 1

[node name="Hunter1" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_d8lb7")
expand_mode = 3

[node name="Timer" type="Timer" parent="HBoxContainer/Hunter1"]

[node name="Hunter2" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_j8s5d")
expand_mode = 3

[node name="Timer" type="Timer" parent="HBoxContainer/Hunter2"]

[node name="Hunter3" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_24q4t")
expand_mode = 3

[node name="Timer" type="Timer" parent="HBoxContainer/Hunter3"]

[node name="Hunter4" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_y2ug4")
expand_mode = 3

[node name="Timer" type="Timer" parent="HBoxContainer/Hunter4"]

[connection signal="timeout" from="HBoxContainer/Hunter1/Timer" to="." method="_on_timer_timeout" binds= ["Hunter1"]]
[connection signal="timeout" from="HBoxContainer/Hunter2/Timer" to="." method="_on_timer_timeout" binds= ["Hunter2"]]
[connection signal="timeout" from="HBoxContainer/Hunter3/Timer" to="." method="_on_timer_timeout" binds= ["Hunter3"]]
[connection signal="timeout" from="HBoxContainer/Hunter4/Timer" to="." method="_on_timer_timeout" binds= ["Hunter4"]]
